objects/Parent_OBJ1__c.object
<CustomObject>
    <fields>
        <fullName>AC12__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AC12</label>
        <referenceTo>AC12__c</referenceTo>
        <relationshipLabel>Parent OBJ1s</relationshipLabel>
        <relationshipName>Parent_OBJ1s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Nc1</label>
        <referenceTo>NC1__c</referenceTo>
        <relationshipLabel>Parent OBJ1s</relationshipLabel>
        <relationshipName>Parent_OBJ1s</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Parent OBJ1</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Parent OBJ1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Parent OBJ1s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>